<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/view_padding"
    android:paddingStart="@dimen/view_padding"
    android:paddingTop="@dimen/view_padding"
    tools:context="io.ggface.tastelesspizza.ui.profile.LoginFragment">

    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/phone_edit_text"
        android:text="@string/login_phone"/>

    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:maxLines="1"/>

    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/password_edit_text"
        android:paddingTop="@dimen/view_padding"
        android:text="@string/login_password"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <TextView
        style="@style/TextStyle.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/view_padding"
        android:text="@string/create_account_password_rules"/>

    <TextView
        android:id="@+id/terms_text_view"
        style="@style/TextStyle.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_padding"
        android:text="@string/sign_in_terms"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_padding"
        android:text="@string/login_log_in"
        android:theme="@style/BaseButton.Active"/>

    <Button
        android:id="@+id/forgot_password_button"
        style="@style/BaseButton.Link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_padding"
        android:text="@string/login_forgot_your_password"/>
</LinearLayout>
