<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="@dimen/view_padding"
    android:paddingStart="@dimen/view_padding"
    android:paddingTop="@dimen/view_padding"
    tools:context="io.ggface.tastelesspizza.ui.profile.RestorePasswordActivity">

    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/phone_edit_text"
        android:text="@string/restore_password_phone"/>

    <EditText
        android:id="@+id/phone_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:maxLines="1"/>

    <TextView
        style="@style/TextStyle.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/view_padding"
        android:text="@string/restore_password_phone_hint"/>

    <Button
        android:id="@+id/restore_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_padding"
        android:text="@string/restore_password_restore"
        android:theme="@style/BaseButton.Active"/>
</LinearLayout>